FAQ Layout overhaul ref #10 Fixed home pages forced scrollbars Fixed scrollbar not hitting bouds of container

--- a/css/partials/_scrollbars.styl
+++ b/css/partials/_scrollbars.styl
@@ -17,8 +17,8 @@
 
 
 .optiscroll-v
-	top: 4px
-	bottom: 4px
+	top: 0
+	bottom: 0
 	width: 0
 
 
